--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
-    "lint": "prettier --check . && eslint ."
+    "lint": "prettier --check . && eslint .",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
@@ -23,10 +27,13 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/jsdom": "^21.1.7",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^3.0.0",
     "globals": "^16.0.0",
+    "jsdom": "^26.1.0",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
@@ -36,13 +43,16 @@
     "tailwindcss": "^4.0.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.20.0",
-    "vite": "^6.2.6"
+    "vite": "^6.2.6",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@friendlycaptcha/sdk": "^0.1.26",
-    "@friendlycaptcha/server-sdk": "^0.1.2",
-    "@iconify/svelte": "^5.0.0",
+    "@types/dompurify": "^3.2.0",
     "@types/nodemailer": "^6.4.17",
-    "nodemailer": "^7.0.5"
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.35.1",
+    "dompurify": "^3.2.6",
+    "nodemailer": "^7.0.5",
+    "simple-icons": "^15.7.0"
   }
 }
