--- a/docker-compose.main.yml
+++ b/docker-compose.main.yml
@@ -1,16 +1,37 @@
 services:
+  # Optional Redis service for rate limiting
+  # Remove this section if you're running Redis separately
+  redis:
+    image: redis:7-alpine
+    command: redis-server --appendonly yes
+    volumes:
+      - redis_data:/data
+    networks:
+      - web
+    # Uncomment if you need external access to Redis
+    # ports:
+    #   - "6379:6379"
+
   stacktastic-main:
     image: stacktastic-main:${IMAGE_TAG}
+    depends_on:
+      - redis
     environment:
       - NODE_ENV=production
+      # Email configuration
       - CONTACT_RECEIVER=${CONTACT_RECEIVER}
       - MAIL_HOST=${MAIL_HOST}
       - MAIL_PORT=${MAIL_PORT}
+      - MAIL_SECURE=${MAIL_SECURE:-false}
       - MAIL_USER=${MAIL_USER}
       - MAIL_PASS=${MAIL_PASS}
-      - FRIENDLY_CAPTCHA_SECRET=${FRIENDLY_CAPTCHA_SECRET}
-      - API_KEY_FRIENDLY_CAPTCHA=${API_KEY_FRIENDLY_CAPTCHA}
+      # cap.js CAPTCHA configuration
       - CAPTCHA_SECRET=${CAPTCHA_SECRET}
+      - VITE_CAPTCHA_SECRET=${VITE_CAPTCHA_SECRET}
+      # Security configuration
+      - CSRF_SECRET=${CSRF_SECRET}
+      # Redis rate limiting (connects to Redis service above)
+      - REDIS_URL=${REDIS_URL:-redis://redis:6379}
     labels:
       - "traefik.enable=true"
 
@@ -28,6 +49,9 @@ services:
       - "traefik.http.services.stacktastic-main.loadbalancer.server.port=3000"
     networks:
       - web
+
+volumes:
+  redis_data:
 
 networks:
   web:
