Update GitHub Actions deployment workflow for cap.js
Environment Variable Updates:
- Remove old Friendly Captcha secrets (API_KEY_FRIENDLY_CAPTCHA, FRIENDLY_CAPTCHA_SECRET)
- Add cap.js CAPTCHA configuration (CAPTCHA_SECRET, VITE_CAPTCHA_SECRET)
- Add missing MAIL_SECURE environment variable
- Add CSRF_SECRET for enhanced security
- Add optional REDIS_URL for rate limiting

Documentation Updates:
- Add GitHub Actions secrets section to DEPLOYMENT.md
- Document all required secrets for automated deployment
- Include instructions for adding secrets in GitHub repository settings

The deployment workflow now matches the current application configuration
using cap.js instead of Friendly Captcha and includes all security features.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,14 +45,20 @@ jobs:
             gunzip -f image.tar.gz
             docker load < image.tar
 
-            API_KEY_FRIENDLY_CAPTCHA=${{ secrets.API_KEY_FRIENDLY_CAPTCHA }} \
+            # Email configuration
             CONTACT_RECEIVER=${{ secrets.CONTACT_RECEIVER }} \
             MAIL_HOST=${{ secrets.MAIL_HOST }} \
             MAIL_PORT=${{ secrets.MAIL_PORT }} \
+            MAIL_SECURE=${{ secrets.MAIL_SECURE }} \
             MAIL_USER=${{ secrets.MAIL_USER }} \
             MAIL_PASS=${{ secrets.MAIL_PASS }} \
-            FRIENDLY_CAPTCHA_SECRET=${{ secrets.FRIENDLY_CAPTCHA_SECRET }} \
+            # cap.js CAPTCHA configuration
             CAPTCHA_SECRET=${{ secrets.CAPTCHA_SECRET }} \
+            VITE_CAPTCHA_SECRET=${{ secrets.VITE_CAPTCHA_SECRET }} \
+            # Security configuration
+            CSRF_SECRET=${{ secrets.CSRF_SECRET }} \
+            # Redis rate limiting (optional)
+            REDIS_URL=${{ secrets.REDIS_URL }} \
             IMAGE_TAG=${{ github.sha }} docker-compose -f docker-compose.${{ github.ref_name }}.yml up -d --force-recreate
 
             rm -f image.tar
